<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.tauan.themovieapp.ui.viewmodel.MovieViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.MovieDetailsFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movie_image_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/movie_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewmodel.movieLiveData.title}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/movie_image_details"
                app:layout_constraintTop_toTopOf="@id/movie_image_details"
                tools:text="Saw" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline1"
                tools:text="Saw (date release)" />

            <TextView
                android:id="@+id/label_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_rating"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_name" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@{viewmodel.movieLiveData.rating}"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/label_rating"
                app:layout_constraintTop_toBottomOf="@id/movie_name"
                tools:text="95%" />

            <TextView
                android:id="@+id/movie_description_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:text="@{viewmodel.movieLiveData.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_rating"
                tools:text="@string/lorem_ipsum" />

            <TextView
                android:id="@+id/label_posters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_posters"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_description_details" />

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/posters_list"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginHorizontal="16dp"
                app:autoPlay="true"
                app:autoPlayDelay="3000"
                app:autoWidthFixing="true"
                app:carouselGravity="CENTER"
                app:carouselPadding="0dp"
                app:carouselPaddingBottom="0dp"
                app:carouselPaddingEnd="0dp"
                app:carouselPaddingStart="0dp"
                app:carouselPaddingTop="0dp"
                app:carouselType="SHOWCASE"
                app:infiniteCarousel="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_posters"
                app:scaleOnScroll="false"
                app:scalingFactor="0.15"
                app:showNavigationButtons="true"
                app:touchToPause="true" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>